--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,10 @@
 {
     "rewrites": [
         {
-            "source": "/(.*)",
+            "source": "/((?!api/.*|.*\\..*).*)",
             "destination": "/index.html"
         }
-    ]
+    ],
+    "cleanUrls": true,
+    "framework": "vite"
 }
